--- a/wagtailio/services/templates/services/services_page.html
+++ b/wagtailio/services/templates/services/services_page.html
@@ -19,7 +19,16 @@
                 {% endif %}
                 <ul class="page-heading__links">
                     {% for section in page.body %}
-                        <li><a href="#{{ section.value.title|slugify }}"><svg class="icon__arrow" viewBox="0 0 100 100"><use href="#arrow-alt"></svg>{{ section.value.title }}</a></li>
+                        <li>
+                            <a href="#{{ section.value.title|slugify }}">
+                                <svg class="icon__arrow" viewBox="0 0 100 100">
+                                    <use href="#arrow-alt">
+                                </svg>
+                                <div>
+                                    {{ section.value.title }}
+                                </div>
+                            </a>
+                        </li>
                     {% endfor %}
                 </ul>
             </div>
