--- a/wagtailio/static/css/pages/services.scss
+++ b/wagtailio/static/css/pages/services.scss
@@ -223,8 +223,12 @@
       max-width: 1200px;
       margin: 0 auto;
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       justify-content: center;
+
+      @include media-query(medium) {
+        flex-direction: row;
+      }
     }
 
     &__image {
