--- a/wagtailio/static/css/pages/services.scss
+++ b/wagtailio/static/css/pages/services.scss
@@ -41,9 +41,9 @@
     fill: currentColor;
   }
 
-  .button {
+  .link-button {
     display: block;
-    width: max-content;
+    width: 100%;
     padding: 16px 40px;
     margin: 40px 0;
 
@@ -51,17 +51,30 @@
 
     font-size: 16px;
     font-weight: normal;
+    text-align: center;
 
     color: $color--primary;
     background-color: $color--lagoon;
     @include transition(background-color $anim-speed-primary ease);
 
+    @media only screen and (min-width: 500px) {
+      // The small breakpoint would already lead to a very wide button
+      width: max-content;
+    }
+
     &:hover {
       background-color: darken($color--secondary, 10%);
     }
 
+    &__lead {
+      display: none;
+      @include media-query(small) {
+        display: inline-block;
+      }
+    }
+
   }
-  a.button {
+  a.link-button {
     // Overrride for .page-content > .container a
     border: 0
   }
