Fix section heading and padding breakpoints

--- a/wagtailio/static/css/pages/services.scss
+++ b/wagtailio/static/css/pages/services.scss
@@ -213,7 +213,7 @@
 
   .section {
     margin: 0 (-$gutter);
-    padding: 60px $gutter;
+    padding: 80px $gutter;
 
     @include media-query(medium) {
       padding: 120px $gutter;
@@ -347,7 +347,7 @@
       font-size: 28px;
       line-height: 1.1;
 
-      @include media-query(medium) {
+      @include media-query(small) {
         font-size: 44px;
       }
     }
