--- a/wagtailio/services/templates/services/blocks/quote.html
+++ b/wagtailio/services/templates/services/blocks/quote.html
@@ -1,5 +1,5 @@
 {% with value as quote %}
-    <blockquote>
+    <blockquote class="quote">
         <p>
             {{ quote.text }}
         </p>
