--- a/wagtailio/static/css/pages/services.scss
+++ b/wagtailio/static/css/pages/services.scss
@@ -4,14 +4,20 @@
 
 */
 .template-services-page {
-
   $content-width: 800px;
 
   $color--primary: $color--deep-indigo;
   color: $color--lighter-indigo;
 
-  a, a:hover {
-    h2, h3 {
+  // Overrride for .page-content > .container a
+  .container .card .card__link {
+    border: 0;
+  }
+
+  a,
+  a:hover {
+    h2,
+    h3 {
       color: $color--primary;
     }
   }
@@ -83,11 +89,10 @@
         display: inline-block;
       }
     }
-
   }
   a.link-button {
     // Overrride for .page-content > .container a
-    border: 0
+    border: 0;
   }
 
   .divider {
@@ -104,96 +109,6 @@
 
     @include media-query(small) {
       margin: 57px 0 27px;
-    }
-  }
-
-  .card {
-    flex: 0 0 auto;
-
-    position: relative;
-    width: 242px;
-    height: 332px;
-    padding: 30px 23px 20px;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-
-    text-align: center;
-    border: 1px solid;
-    border-radius: 4px;
-
-    color: $color--primary;
-    border-color: $color--grey-3;
-    @include transition(border-color $anim-speed-primary ease);
-    background-color: $color--white;
-
-    @include media-query(medium) {
-      width: 280px;
-    }
-
-    &__upper {
-      overflow-y: hidden;
-    }
-
-    &__divider {
-      width: 100%;
-      height: 1px;
-      margin: 20px 0 20px;
-      border: none;
-      background-color: $color--wagtailio-grey;
-    }
-
-    &__text {
-      font-size: 13px;
-      line-height: 1.5;
-
-      @include media-query(medium) {
-        font-size: 14px;
-      }
-
-      & p {
-        margin: 20px 0;
-      }
-    }
-
-    &__link {
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-    }
-
-    // Overrride for .page-content > .container a
-    &, &:hover {
-      > a.card__link {
-        border: 0;
-      }
-    }
-
-    &__button {
-      width: 100%;
-      padding: 10px 10px;
-
-      border-radius: 3px;
-      font-size: 14px;
-      font-weight: bold;
-
-      background-color: $color--white;
-      @include transition(background-color $anim-speed-primary ease);
-
-      .external-link {
-        height: 12px;
-      }
-    }
-
-    &:hover {
-      border-color: $color--grey-4;
-
-      .card__button {
-        background-color: $color--lagoon;
-      }
     }
   }
 
@@ -219,11 +134,9 @@
       scroll-snap-align: center;
 
       @include media-query(medium) {
-        padding-right: 52px
+        padding-right: 52px;
       }
     }
-
-
   }
 
   .section {
@@ -242,8 +155,10 @@
       background-color: $color--deep-indigo;
       color: $color--white;
 
-      a, a:hover {
-        h2, h3 {
+      a,
+      a:hover {
+        h2,
+        h3 {
           color: $color--white;
         }
       }
@@ -363,7 +278,6 @@
       }
     }
 
-
     &__content {
       width: 100%;
       max-width: $content-width;
@@ -411,9 +325,9 @@
             padding-left: 30px;
           }
 
-          &::before{
+          &::before {
             display: inline-block;
-            content: '';
+            content: "";
             width: 13.3px;
             height: 16px;
             margin-left: -20px;
@@ -487,7 +401,7 @@
         font-size: 18px;
       }
 
-      li  {
+      li {
         margin-bottom: 23px;
 
         a {
