Move divider scss to separate file

--- a/wagtailio/static/css/main.scss
+++ b/wagtailio/static/css/main.scss
@@ -16,6 +16,7 @@
 @import "components/headings";
 
 @import "components/card";
+@import "components/divider";
 @import "components/header";
 @import "components/primary-nav";
 @import "components/logo";
