--- a/wagtailio/static/css/pages/services.scss
+++ b/wagtailio/static/css/pages/services.scss
@@ -10,7 +10,8 @@
   color: $color--lighter-indigo;
 
   // Overrride for .page-content > .container a
-  .container .card .card__link {
+  .container .card .card__link,
+  .container a.link-button {
     border: 0;
   }
 
@@ -56,43 +57,6 @@
     height: 14px;
     padding-left: 6px;
     fill: currentColor;
-  }
-
-  .link-button {
-    display: block;
-    width: 100%;
-    padding: 16px 40px;
-    margin: 40px 0;
-
-    border-radius: 3px;
-
-    font-size: 16px;
-    font-weight: normal;
-    text-align: center;
-
-    color: $color--primary;
-    background-color: $color--lagoon;
-    @include transition(background-color $anim-speed-primary ease);
-
-    @media only screen and (min-width: 500px) {
-      // The small breakpoint would already lead to a very wide button
-      width: max-content;
-    }
-
-    &:hover {
-      background-color: darken($color--secondary, 10%);
-    }
-
-    &__lead {
-      display: none;
-      @include media-query(small) {
-        display: inline-block;
-      }
-    }
-  }
-  a.link-button {
-    // Overrride for .page-content > .container a
-    border: 0;
   }
 
   .cards {
