Move quote scss to separate file

--- a/wagtailio/static/css/main.scss
+++ b/wagtailio/static/css/main.scss
@@ -20,6 +20,7 @@
 @import "components/header";
 @import "components/link-button";
 @import "components/primary-nav";
+@import "components/quote";
 @import "components/logo";
 @import "components/buttons";
 @import "components/page_content";
