Move external link icon scss to sep file

--- a/wagtailio/services/templates/services/blocks/link_button.html
+++ b/wagtailio/services/templates/services/blocks/link_button.html
@@ -3,7 +3,7 @@
         <span class="link-button__lead">{{value.lead_text}} </span>
     {% endif %}
     <strong >{{value.action_text}}</strong>
-    <svg class="icon__external-link" viewBox="0 0 100 100">
+    <svg class="external-link-icon" viewBox="0 0 100 100">
         <use href="#external-link">
     </svg>
 </a>
