--- a/wagtailio/static/css/main.scss
+++ b/wagtailio/static/css/main.scss
@@ -17,6 +17,7 @@
 
 @import "components/card";
 @import "components/divider";
+@import "components/external-link-icon";
 @import "components/header";
 @import "components/link-button";
 @import "components/primary-nav";
