Add rough video implementation
This needs clean up an need to be made responsive

--- a/wagtailio/static/css/pages/services.scss
+++ b/wagtailio/static/css/pages/services.scss
@@ -83,6 +83,10 @@
         border-radius: 100%;
       }
 
+      video {
+        max-height: 100%;
+      }
+
       &-wrapper {
         flex: 0 0 390px;
         margin: 0;
