--- a/wagtailio/services/templates/services/blocks/section.html
+++ b/wagtailio/services/templates/services/blocks/section.html
@@ -1,6 +1,17 @@
 {% load wagtailcore_tags wagtailimages_tags %}
+{% load static %}
 {% with value as section %}
 <section id="{{ section.title|slugify }}" class="section section--{{ section_modifier }}">
+    {% comment %} <div class="vid-wrapper">
+        <video width="390" autoplay loop>
+            <source type="{{ section.section_media.type }}/{{section.section_media.file_extension}}" src="{{ section.section_media.url }}">
+        </video>
+    </div> {% endcomment %}
+<div class="vid-wrapper" style="border-radius: 100%;width: 390px;height: 390px;overflow: hidden;">
+        <video autoplay="" loop="" style="/*! width: 100%; */height: 100%;">
+            <source type="video/mp4" src="/media/media/test.mp4">
+        </video>
+    </div>
     <div class="section__inner-wrapper">
         {% if section.section_image %}
             <div class="section__image-wrapper">
