--- a/wagtailio/static/css/pages/services.scss
+++ b/wagtailio/static/css/pages/services.scss
@@ -69,7 +69,7 @@
       }
     }
 
-    &__image {
+    &-image {
       position: relative;
       max-width: 390px;
       margin: 30px auto 0;
@@ -83,11 +83,30 @@
         border-radius: 100%;
       }
 
-      video {
-        max-height: 100%;
+      &__video {
+        &-container {
+          position: relative;
+          width: 100%;
+          height: 0;
+          padding-top: 100%;
+          overflow-x: hidden;
+          border-radius: 50%;
+        }
+
+        &-wrapper {
+          position: absolute;
+          top: 0;
+          left: 0;
+          height: 100%;
+
+          video {
+            display: block;
+            height: 100%;
+          }
+        }
       }
 
-      &-wrapper {
+      &__wrapper {
         flex: 0 0 390px;
         margin: 0;
 
@@ -96,7 +115,7 @@
         }
       }
 
-      &-overlay {
+      &__overlay {
         position: absolute;
         width: 100%;
         height: 100%;
@@ -104,17 +123,17 @@
         background-color: $color--lagoon;
       }
 
-      &-overlay--var1 {
+      &__overlay--var1 {
         opacity: 0.2;
         left: -70px;
       }
 
-      &-overlay--var2 {
+      &__overlay--var2 {
         opacity: 0.1;
         left: -120px;
       }
 
-      &-caption {
+      &__caption {
         margin: 30px 0;
         text-align: center;
         font-size: 14px;
