--- a/wagtailio/services/templates/services/blocks/section.html
+++ b/wagtailio/services/templates/services/blocks/section.html
@@ -11,7 +11,7 @@
                     {% comment %} {% image section.section_image fill-390x390 %} {% endcomment %}
                     <div class="section-image__video-container">
                         <div class="section-image__video-wrapper">
-                            <video autoplay="autoplay" loop="loop">
+                            <video autoplay="autoplay" loop="loop" muted="muted">
                                 <source type="{{ section.section_media.type }}/{{section.section_media.file_extension}}" src="{{ section.section_media.url }}">
                             </video>
                         </div>
