--- a/wagtailio/static/css/pages/services.scss
+++ b/wagtailio/static/css/pages/services.scss
@@ -121,16 +121,18 @@
         height: 100%;
         border-radius: 100%;
         background-color: $color--lagoon;
-      }
 
-      &__overlay--var1 {
-        opacity: 0.2;
-        left: -70px;
-      }
+        &--var1 {
+          opacity: 0.2;
+          left: -70px;
+          z-index: 5;
+        }
 
-      &__overlay--var2 {
-        opacity: 0.1;
-        left: -120px;
+        &--var2 {
+          opacity: 0.1;
+          left: -120px;
+          z-index: 10;
+        }
       }
 
       &__caption {
