--- a/wagtailio/services/templates/services/blocks/card.html
+++ b/wagtailio/services/templates/services/blocks/card.html
@@ -1,6 +1,6 @@
 {% load wagtailcore_tags wagtailimages_tags %}
 {% with value as card %}
-<div class="card">
+<a class="card" href="{{ card.link }}">
     <div class="card__upper">
         {% image card.image fill-138x110 %}
         <hr class="card__divider">
@@ -8,7 +8,6 @@
             {{ card.text }}
         </div>
     </div>
-    <a class="card__link" href="{{ card.link }}"></a>
     <div class="card__button">{{ card.link_text }}<svg class="external-link-icon" viewBox="0 0 100 100"><use href="#external-link"></svg></div>
-</div>
+</a>
 {% endwith %}
