--- a/wagtailio/static/css/components/card.scss
+++ b/wagtailio/static/css/components/card.scss
@@ -11,7 +11,8 @@
   justify-content: space-between;
 
   text-align: center;
-  border: 1px solid;
+  border-width: 1px;
+  border-style: solid;
   border-radius: 4px;
 
   color: $color--primary;
