--- a/wagtailio/services/templates/services/blocks/link_button.html
+++ b/wagtailio/services/templates/services/blocks/link_button.html
@@ -4,6 +4,6 @@
     {% endif %}
     <strong >{{ value.action_text }}</strong>
     <svg class="external-link-icon" viewBox="0 0 100 100">
-        <use href="#external-link">
+        <use xlink:href="#external-link">
     </svg>
 </a>
