Use xlink:href on card

--- a/wagtailio/services/templates/services/blocks/card.html
+++ b/wagtailio/services/templates/services/blocks/card.html
@@ -8,6 +8,6 @@
             {{ card.text }}
         </div>
     </div>
-    <div class="card__button">{{ card.link_text }}<svg class="external-link-icon" viewBox="0 0 100 100"><use href="#external-link"></svg></div>
+    <div class="card__button">{{ card.link_text }}<svg class="external-link-icon" viewBox="0 0 100 100"><use xlink:href="#external-link"></svg></div>
 </a>
 {% endwith %}
