Use xlink:href instead of href for section links

--- a/wagtailio/services/templates/services/services_page.html
+++ b/wagtailio/services/templates/services/services_page.html
@@ -22,7 +22,7 @@
                         <li>
                             <a href="#{{ section.value.title|slugify }}">
                                 <svg class="icon__arrow" viewBox="0 0 100 100">
-                                    <use href="#arrow-alt">
+                                    <use xlink:href="#arrow-alt">
                                 </svg>
                                 <div>
                                     {{ section.value.title }}
