--- a/wagtailio/services/templates/services/blocks/section.html
+++ b/wagtailio/services/templates/services/blocks/section.html
@@ -30,7 +30,7 @@
         <div class="section__content">
             <div class="section__icon">
                 <svg>
-                    <use href="#{{ section.icon }}"></use>
+                    <use xlink:href="#{{ section.icon }}"></use>
                 </svg>
             </div>
             <hr class="section__heading-line">
