Remove values from video presence attributes
The attributes don't need a value, but to accept their name as a value.
Not sure why I used it in the first place. It does not seem to be necessary.

--- a/wagtailio/services/templates/services/blocks/section.html
+++ b/wagtailio/services/templates/services/blocks/section.html
@@ -11,7 +11,7 @@
                     {% if section.section_media %}
                         <div class="section-image__video-container">
                             <div class="section-image__video-wrapper">
-                                <video autoplay="autoplay" loop="loop" muted="muted">
+                                <video autoplay loop muted>
                                     <source type="{{ section.section_media.type }}/{{section.section_media.file_extension}}" src="{{ section.section_media.url }}">
                                 </video>
                             </div>
